--- a/index.html
+++ b/index.html
@@ -9,15 +9,25 @@
 </head>
 <body>
 
-<ul id=songList>
+<div class="container">
+   <ul id='setList'>
+<p>
+   Ideą aplikacji jest rozwiązanie problemu, z którym spotykam się grając w zespole muzycznym! Bardzo często, przed koncertem, zespół stara się przygotować listę piosenek, które odegrane zostaną na koncercie - ustawić je w odpowiedniej kolejności, wybrać którą piosenką zacząć, którą skończyć, co zagrać na bis, ile piosenek w ogóle uwzględnić, w zależności od czasu trwania koncertu, ilości setów, itd., jednocześnie przy ustalaniu kolejności, uwzględniane są takie własności piosenek, jak tempo, to czy dana piosenka jest hitem(ulubionym przez ludzi) itd. Niektóre piosenki grywamy tylko na prywatnych, zamkniętych imprezach, podczas gdy na normalnym koncercie raczej ich nie uwzględniamy, skupiając się na autorskim materiale. Zatem możliwość automatycznego wygenerowania listy uzględniającej wszystkie takie kryteria jest wspaniałym udogodnieniem!
+</p>
+   </ul>
+   <ul id='rest'>
 
-</ul>
+   </ul>
+
+
+</div>
+<button id='generateSetList'>Generuj Setlistę</button>
 
 </body>
 
 <script type="text/javascript" src='js/jquery-3.1.1.min.js'></script>
-
 <script type="text/javascript" src='js/song_base.js'></script>
+<script type="text/javascript" src='js/engine.js'></script>
 <script type="text/javascript" src='js/app.js'></script>
 
 </html>
