--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content='width=device-width,initial-scale=1' />
-   <link rel="stylesheet" href='css/style.css' />
+   <!--  TYMCZASOWO!!!! -->
+   <meta http-equiv="cache-control" content="max-age=0" />
+   <meta http-equiv="cache-control" content="no-cache" />
+   <meta http-equiv="expires" content="0" />
+   <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+   <meta http-equiv="pragma" content="no-cache" />
+
+   <link rel="stylesheet" href='css/style.min.css' />
    <title> </title>
 
 </head>
@@ -25,18 +32,13 @@
 
       <section id='generator'>
          <div class="generator_buttons">
-            <button type='submit' form='parameters' id='generateSetList'>Generuj Setlistę</button>
-            <button type="button"  id="toggleGenerator">pokaż/ukryj</button>
+            <button type='submit' form='parameters' id='generateSetList'>Generate List!</button>
+            <button type="button"  id="toggleGenerator">Settings</button>
          </div>
 
          <!-- ..............GENERATOR PARAMETERS FORM..................... -->
          <form id="parameters">
-            <!-- IOS SWITCHER -->
-            <label for="event">Event</label>
-            <div>
-               <label><input type="checkbox" name='event' class="ios-switch"  /><div><div></div></div></label>
-            </div>
-            <div class="middle_input">
+            <div class="sets_number">
                <span>
                   <input type="radio" id='radio01' name="sets" value='1' checked='true' />
                   <label for="radio01"><span class='radio_label'>1</span></label>
@@ -45,16 +47,24 @@
                   <input type="radio" id='radio03' name="sets" value='3' />
                   <label for="radio03"><span class='radio_label'>3</span></label>
                </span>
-               <div>Ilość setów: </div>
+               <div>Sets: </div>
             </div>
-            <div>
+            <div class="set_duration">
+               <label for="setDuration">Set duration:</label>
                <select name="setDuration">
                   <option value="30">30 minut</option>
                   <option value="45">45 minut</option>
                   <option value="60" selected='true'>60 minut</option>
                   <option value="90">90 minut</option>
                </select>
-               <label for="setDuration">Czas jednego seta</label>
+            </div>
+            <!-- IOS SWITCHER -->
+
+
+            <div class="event_check">
+               <label for="event">Event:</label>
+               <label><input type="checkbox" name='event' class="ios-switch"  /><div><div></div></div></label>
+
             </div>
          </form>
       </section>
@@ -66,10 +76,14 @@
 
 
    <!-- ...........................SIDEBAR................................. -->
-   <div class="sidebar sortable">
-      <ul id='rest'>
+   <div class="sidebar">
+      <div class="sidebar_background">
+         <span>Pozostałe piosenki</span>
+      </div>
+      <ul id='rest' class='sortable'>
 
       </ul>
+
    </div>
 
 
@@ -84,57 +98,96 @@
    <section class='song_database'>
       <div class='songDatabase_form_container'>
          <form id='songAddForm' method='POST'>
-            <div>Title
-               <input type='text' name='title' />
+            <div class='title'>
+               <div>Title</div>
+               <input type='text' maxlength=50 name='title' />
             </div>
-            <div>Duration (s):
-               <input type='number' name='duration' />
+
+            <div class='song_duration'>
+               <div>Duration (s):</div>
+               <input type='number' min='0' max='1000' name='duration' />
             </div>
-            <div>Must Be
-               <input type='radio' name='mustBe' value=true />
-               <input type='radio' name='mustBe' value=false checked/>
+
+            <div class='mustBe'>
+               <label for="mustBe">Must Be</label>
+               <div>
+                  <label><input type="checkbox" name='mustBe' class="ios-switch"  /><div><div></div></div></label>
+               </div>
             </div>
-            <div>Tempo
+
+            <div class='tempo'>
+               <div>Tempo</div>
                <select name='tempo'>
                   <option value='slow'>Slow</option>
                   <option value='moderate' selected>Moderate</option>
                   <option value='fast'>Fast</option>
                </select>
             </div>
-            <div> Energy Rating
-               1<input type='radio' name='energyRating' value=1 />
-               2<input type='radio' name='energyRating' value=2 />
-               3<input type='radio' name='energyRating' value=3 checked />
-               4<input type='radio' name='energyRating' value=4 />
-               5<input type='radio' name='energyRating' value=5 />
+
+            <div class=energyRating>
+               <div> Energy Rating </div>
+               <div class="stars">
+                  <input type="radio" name="energyRating" class="star-1" id="star-1" value='1' checked='true' />
+                  <label class="star-1" for="star-1">1</label>
+                  <input type="radio" name="energyRating" class="star-2" id="star-2" value='2'/>
+                  <label class="star-2" for="star-2">2</label>
+                  <input type="radio" name="energyRating" class="star-3" id="star-3" value='3' />
+                  <label class="star-3" for="star-3">3</label>
+                  <input type="radio" name="energyRating" class="star-4" id="star-4" value='4'/>
+                  <label class="star-4" for="star-4">4</label>
+                  <input type="radio" name="energyRating" class="star-5" id="star-5" value='5' />
+                  <label class="star-5" for="star-5">5</label>
+                  <span></span>
+               </div>
             </div>
-            <div> On Start
-               <label>Yes<input type='radio' name='start' value=true /></label>
-               <label>No<input type='radio' name='start' value=false checked/></label>
+            <div class='start'>
+               <label for="event">Start</label>
+               <div>
+                  <label><input type="checkbox" name='start' class="ios-switch"  /><div><div></div></div></label>
+               </div>
             </div>
-            <div> On End
-               <label>Yes<input type='radio' name='end' value=true /></label>
-               <label>No<input type='radio' name='end' value=false checked/></label>
+            <div class='end'>
+               <label for="end">End</label>
+               <div>
+                  <label><input type="checkbox" name='end' class="ios-switch"  /><div><div></div></div></label>
+               </div>
             </div>
-            <div> On Encore
-               <label>Yes<input type='radio' name='encore' value=true  /></label>
-               <label>No<input type='radio' name='encore' value=false checked/></label>
+            <div class='bis'>
+               <label for="bis">Encore</label>
+               <div>
+                  <label><input type="checkbox" name='bis' class="ios-switch"  /><div><div></div></div></label>
+               </div>
             </div>
-            <div>Event type:
+
+            <div class='eventType'>
+               <div>Event type:</div>
                <select name='only'>
                   <option value='concert'>Concert</option>
                   <option value='event' selected>Event</option>
                   <option value='false' selected>Both</option>
                </select>
             </div>
-            <button>Add Song!</button>
+            <div class='password'>
+               <div>Password:</div>
+               <input type='password' name='pass' placeholder='insert safety code' />
+            </div>
+
+            <button id='songSubmit'>Add!</button>
          </form>
       </div>
 
       <div class='database'>
+         <header>
+            <div id='closeDatabase'></div>
+            Songs Database
+         </header>
+         <div class="logo_KSB">
+         </div>
+         <div class="addBtnContainer">
+            <div class='addLabel'>Add a song</div><img src='images/add.png' id='addSongBtn' class='rotated'>
+         </div>
 
-      </div>
-   </section>
+      </section>
 
 
 
@@ -142,13 +195,14 @@
 
 
 
-</body>
+   </body>
 
-<script type="text/javascript" src='js/jquery-3.1.1.min.js'></script>
-<script type="text/javascript" src='js/jquery-ui.min.js'></script>
-<script type="text/javascript" src='js/song_base.js'></script>
-<script type="text/javascript" src='js/basic.js'></script>
-<script type="text/javascript" src='js/engine.js'></script>
-<script type="text/javascript" src='js/app.js'></script>
+   <script type="text/javascript" src='js/jquery-3.1.1.min.js'></script>
+   <script type="text/javascript" src='js/jquery-ui.min.js'></script>
+   <script type="text/javascript" src='js/jquery.ui.touch-punch.js'></script>
+   <script type="text/javascript" src='js/song_base.js'></script>
+   <script type="text/javascript" src='js/basic.js'></script>
+   <script type="text/javascript" src='js/engine.js'></script>
+   <script type="text/javascript" src='js/app.js'></script>
 
-</html>
+   </html>
