--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
             <div class="generator_logo">
             </div>
             <p>
-               Ideą aplikacji jest rozwiązanie problemu, z którym spotykam się grając w zespole muzycznym! Bardzo często, przed koncertem, zespół stara się przygotować listę piosenek, które odegrane zostaną na koncercie - ustawić je w odpowiedniej kolejności, wybrać którą piosenką zacząć, którą skończyć, co zagrać na bis, ile piosenek w ogóle uwzględnić, w zależności od czasu trwania koncertu, ilości setów, itd., jednocześnie przy ustalaniu kolejności, uwzględniane są takie własności piosenek, jak tempo, to czy dana piosenka jest hitem(ulubionym przez ludzi) itd. Niektóre piosenki grywamy tylko na prywatnych, zamkniętych imprezach, podczas gdy na normalnym koncercie raczej ich nie uwzględniamy, skupiając się na autorskim materiale. Zatem możliwość automatycznego wygenerowania listy uzględniającej wszystkie takie kryteria jest wspaniałym udogodnieniem!
+               Ideą aplikacji jest rozwiązanie problemu, z którym spotykam się grając w zespole muzycznym! Przed koncertem trzeba stworzyć listę piosenek, ustawić je w odpowiedniej kolejności, wybrać którą piosenką zacząć, którą skończyć, co zagrać na bis, ile piosenek w ogóle uwzględnić, w zależności od czasu trwania koncertu, ilości setów, itd. Jednocześnie, przy ustalaniu kolejności uwzględniane są takie własności piosenek, jak tempo, to czy dana piosenka jest hitem (ulubionym przez ludzi)itd. Niektóre piosenki grane są tylko na prywatnych, zamkniętych imprezach, podczas gdy na normalnym koncercie raczej ich nie uwzględniamy, skupiając się na autorskim materiale. Zatem możliwość automatycznego wygenerowania listy uwzględniającej wszystkie takie kryteria jest wspaniałym udogodnieniem!<br><br>
+                  <span class='link'>
+                     Kod do obejrzenia:
+                     <a href="https://github.com/drabikowy/SetList-Generator-">https://github.com/drabikowy/SetList-Generator-
+                     </a>
+                  </span>
             </p>
          </div>
       </section>
